No ticket. Z-index change to ensure that toolbar elements are always above window elements (like the history component) in the window header.

--- a/desktop/core/static/css/windows.css
+++ b/desktop/core/static/css/windows.css
@@ -111,6 +111,7 @@ div.solid-win a.ccs-close {
 	width:100%;
 	height: 0px;
 	overflow: visible;
+	z-index: 100;
 }
 .art-window-resize-handle {
 	cursor: se-resize;
